--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
       <button class="tablink t4" onclick="openPage('About', this, '#6b5ace')">CAREER PATH</button>
       <button class="tablink t5" onclick="openPage('About', this, '#a02ed4')">LOGIN</button>
       
-      <h1 class="bottom-left">NUMBHEALERS</h1>
+      <h1 class="bottom-left">
+        NUMBHEALERS
+        <p class="subtext">Here, whispers from the universe converge with the enigmatic language of numbers. Delve into the secrets they hold, unravelling hidden pathways to healing and career enlightenment. Surrender to the cosmic dance, where destiny's embrace awaits those who dare to listen. Embark on this enigmatic voyage, guided by the celestial forces that shape our existence. The universe beckons. Will you answer ?</p>
+      </h1>
+      
         <form class="container">
           <h1> NUMEROLOGY CHART</h1>
           <label for="dob"><b>Date of birth</b></label>
