--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       
         <form class="container">
           <h1> NUMEROLOGY CHART</h1>
-          <label for="dob"><b>Date of birth</b></label>
+          <qlabel for="dob"><b>Date of birth</b></label>
           <p><input type="number" min="1" max="31" id="day" placeholder="Day" required/></p>
           <input type="number" min="1" max="12" id="month" placeholder="Month" required/>
           <input type="number" min="1900" max="2050" id="year" placeholder="Year" required/>
