--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <input type="number" min="1" max="12" id="month" placeholder="Month" required/>
           <input type="number" min="1900" max="2050" id="year" placeholder="Year" required/>
           <label for="name"><b>Name</b></label>
-          <input type="text" placeholder="WRITE YOUR NAME IN CAPS" id="name" required/>
+          <input type="text" placeholder="Full name" id="name" required/>
           <button type="button" class="btn" onclick="xcalculate();openPage('News', this, '#4b0dbd91');document.getElementById('News').scrollIntoView()">CALCULATE CHART</button>
         </form>
     </div>
@@ -41,7 +41,6 @@
         <p id="na2"></p>
         <strong>Soul urge number</strong>
         <p id="info3"></p></div>
-        <img src="https://media.istockphoto.com/id/1385038554/vector/mystical-poster-for-numerology-astrology-and-future-prediction-two-palms-of-a-hand-with-an.jpg?s=612x612&w=0&k=20&c=98sRyQqKaR5zs_Gu91Z5GqgHdggZ6wfyes27R7F8re8=" class="i1"/>
         <div class='pe'>
           <p id="na1"></p>
         <strong>Personality number</strong> 
